# nhentai-favs

./: Cargo.toml  LICENSE  README.md  config.json
.github/workflows/: artifact-build.yml
src/: api.rs  cli.rs  config.rs  database.rs  db.rs  error.rs  main.rs  models.rs  nhen_client.rs  scraper.rs  stats.rs
src/models/: book.rs  mod.rs  nhentai.rs  user.rs
src/parser/: html.rs  json.rs  mod.rs
