[package]
name = "nhentai-favs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "^1.0.0", features = ["rt-multi-thread", "macros"] }
wreq = { version= "6.0.0-rc.20", features = ["cookies"] }
wreq-util = "3.0.0-rc.5"
serde = { version = "^1.0.0", features = ["derive"] }
serde_json = "^1.0.0"
scraper = "0.24.0"
regex = "^1.0.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
argh = "0.1.13"

[profile.release]
strip = true
opt-level = "s"
lto = true
