[package]
name = "nhentai-favs"
version = "0.2.1"
edition = "2024"
license = "MIT"

[dependencies]
tokio = { version = "^1.50", features = ["rt-multi-thread", "macros", "time", "fs"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
webpki-roots = "1"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
rusqlite = { version = "^0.39", features = ["bundled"] }
argh = "^0.1"
csv = "^1.3"
indicatif = "^0.18"
anyhow = "^1.0"
futures = "^0.3"

[profile.release]
strip = true
opt-level = "s"
lto = true
